updated: 删除writeRepo